uispacing: fix CC sidebar spacing
A recent update broke the styles which reduced white space in the
Community Console left sidebar. This CL fixes them.

--- a/src/static/css/ui_spacing/console.css
+++ b/src/static/css/ui_spacing/console.css
@@ -125,15 +125,15 @@
    * == SIDEBAR ==
    * Make the items more compact, like before, but only in large screens.
    */
-  :is(ec-forum-drawer-item, ec-filter-drawer-item) > material-list-item {
+  :is(ec-forum-drawer-item, ec-filter-drawer-item) material-list-item {
     height: 40px!important;
   }
 
-  ec-filter-drawer-item > material-list-item {
+  ec-filter-drawer-item material-list-item {
     line-height: 32px!important;
   }
 
-  ec-forum-drawer-item > material-list-item > material-menu > material-button > .content {
+  :is(ec-forum-drawer-item, ec-filter-drawer-item) material-menu > material-button > .content {
     padding: 8px!important;
   }
 
